Fix the error of styling not showing
The problem of the CSS not showing on the page
has been fixed. I forgot to add the link to the
style page in the html file. The link has been
added and the styling is now showing properly.

The font style has been added to the page.
Background and font colors have been added to
the hero section, header, and footer.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
-div.hero-section, footer{
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+header, .hero-section, footer {
     background-color: #1f2937;
     color: #f9faf8;
+}
+
+header h3 {
+    font-size: 24px;
+}
+
+.hero-text h1 {
+    font-weight: 900;
+    font-size: 48px;
+}
+
+.hero-text p, header ul {
+    font-size: 18px;
+    color: #e5e7eb;
 }
